[FIX] account_accountant: Bank Recon table width and UI
The lines_widget on the bank recon width seems to be broken from saas-16.1 up.
This commit removes a style that was applied for 16.0 but is no longer required.

The manual operations tab also causes a small horizontal scroll on the bank recon form view. This is caused by the bootstrap row. Add css to remove the right & left padding.

Fix the lines_widget table header, to match the standard table header.

The notes field stays as is, and need not be fwd-ported

closes odoo/enterprise#40392

X-original-commit: 9b26e2bc7f836ef38886c8f2184169b93a9b636d

--- a/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_form.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_form.scss
@@ -1,7 +1,6 @@
 .o_bank_rec_stats_buttons{
     display: flex;
     flex-flow: row nowrap;
-    margin-bottom: 5px;
     margin-top: -$o-sheet-vpadding;
     height: $o-statbutton-height;
     white-space: nowrap;
@@ -102,8 +101,9 @@
             padding-left: 0 !important;
             padding-right: 0 !important;
 
-            .o_inner_group {
-                padding: 0 50px;
+            .row {
+                margin-left: 0 !important;
+                margin-right: 0 !important;
             }
 
             .bank_rec_widget_form_discuss_anchor{
